mdapipkg/unpackaged/objects/Case_Team__c.object
<CustomObject>
    <fields>
        <fullName>ActiveStatus__c</fullName>
        <description>Displays the icon active or inactive for the Case Teams</description>
        <formula>IMAGE(&quot;/resource/icon_case/&quot;&amp;IF(Active__c == true,&quot;Status_Acknowledge.png&quot;,&quot;Status_Inactive.png&quot;),&quot;&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the Status active or inactive for the Case Teams</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_ID__c</fullName>
        <description>This field use mapping with case owner for point to Case Team</description>
        <label>Queue ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <label>Case Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Teams</pluralLabel>
    <recordTypes>
        <fullName>Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inactive</fullName>
        <active>true</active>
        <label>Inactive</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>